# gmhome

database/: access.sql  data.sql  db.sql  drop.sql  home-data.sql  update-data.sql
imagenes/: planta_completa.odg  planta_frente.odg
syshome/: home.php  index.php
syshome-2.0/: .project  abm_assign.php  dinamicObjects.php  displayTemp.php  homeView.php  mainMenu.html  mainView.php  requestCommand.php  requestData.php  requestPopup.php  requestTables.php  styleSheet.php
syshome-2.0/css/: plantaFrente.css
syshome-2.0/db/: create.sql
syshome-2.0/js/: homeAbm.js  homeComm.js  homeView.js
syshome/controlhome/: abm_assign.php  abm_device.php  abm_event.php  abm_flags.php  abm_group.php  abm_task.php  abm_testigos.php  auto_admin.php  camara.php  casa.php  control.php  event_admin.php  fondo.php  frente.php  hw_admin.php  hw_assign.php  hw_control.php  index.php  inicio.php  main.php  new_group.php  temp_control.php  user_access.php  user_admin.php  user_detail.php  user_key.php
syshome/controlhome/css/: event_admin.css
syshome/include/: README
syshome/login/: index.php  login.php
system/: README
system/homectrl/: Makefile.in  README  configure  configure.ac
system/homectrl/server/: Makefile.am  Makefile.in  server.cc
system/homectrl/server/conf/: server.tab
system/hometask/: Makefile.am  README  configure  configure.ac
system/hometask/server/: Makefile.am  Makefile.in  hometask.cc  hometask.h  server.cc
system/hometask/server/conf/: server.tab
system/sercomm/: INSTALL  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
system/sercomm/client/: Makefile.am  Makefile.in  client.cc
system/sercomm/server/: Makefile.am  Makefile.in  sercomm.cc  sercomm.h  serdev.cc  serdev.h  server.cc
system/sercomm/server/conf/: server.tab
system/syshome/: INSTALL  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
system/syshome/client/: Makefile  Makefile.am  Makefile.in  client.cc  gmh_syshome_cgi
system/syshome/client/.deps/: gmh_syshome_cgi-client.Po
system/syshome/server/: Makefile  Makefile.am  Makefile.in  server.cc
system/syshome/server/conf/: server.tab
system/upsmonitor/: Makefile.in  TODO  config.h.in  configure  configure.ac
system/upsmonitor/client/: Makefile.am  Makefile.in  powerfail  ups.cc  upsmon
system/upsmonitor/server/: Makefile.am  Makefile.in  statups.cc  wpower.cc
system/upsmonitor/server/conf/: server.tab  server_parametro.tab
system/voicemsg/: Makefile.in  README  config.h.in  configure  configure.ac
system/voicemsg/client/: Makefile.am  Makefile.in  voicecli.cc
system/voicemsg/server/: Makefile.am  Makefile.in  voicesrv.cc
system/voicemsg/server/conf/: server.tab
upsmonitor/: INSTALL  Makefile.in  README  configure
upsmonitor/client/: Makefile.in  ups.cc
upsmonitor/server/: Makefile.am  Makefile.in  statups.cc  wpower.cc
upsmonitor/server/conf/: server.tab
